finished code for login - facebook.

--- a/app/views/sign_in/index.html.erb
+++ b/app/views/sign_in/index.html.erb
@@ -38,12 +38,18 @@
 
                                         <section>
                                             <button class="btn btn-base btn-icon btn-icon-right btn-sign-in pull-right" type="submit">
-                                                <span>Next Step</span>
+                                                <span>Login</span>
                                             </button>
                                         </section>
                                     </fieldset>  
                                 </form>  
                             </div>
+
+                             <h5>or</h5>
+                                <a href="/auth/facebook" id="sign_in"><img alt="Facebook login button" border="0" src="/assets/facebook-login-button.png" 
+                                class="img-responsive img-rounded fill"
+                                style="width: 200px;"></a>
+                                
                             <div class="form-footer">
                                 <p>Lost your password? <a href="#">Click here to recover.</a></p>
                             </div>
