--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -214,12 +214,7 @@
                                             <li><a tabindex="-1" href="newsletter/flat/newsletter-flat-6.html" target="_blank">Newsletter Flat: Carrot</a></li>
                                         </ul>
                                     </li>
-                                    <li class="dropdown-submenu"><a tabindex="-1" href="#">Login</a>
-                                        <ul class="dropdown-menu">
-                                            <li><a tabindex="-1" href="/sign_in" target="_blank">Sign in</a></li>
-                                            <li><a tabindex="-1" href="/sign_up" target="_blank">Register</a></li>
-                                        </ul>
-                                    </li>
+                                    
                                 </ul>
                             </li>
                             <li class="dropdown-submenu">
@@ -317,14 +312,31 @@
                             <li><a href="blog-post-2.html">Post: Full width</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown">
+
+                     <% if session[:user_firstname] == nil %>
+
+                        <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login</a>
                         <ul class="dropdown-menu">
                             <li><a tabindex="-1" href="sign_in">Sign in</a></li>
                             <li><a tabindex="-1" href="sign_up">Register</a></li>
                                                   
                         </ul>
+                    </li>     
+
+                    <% else %>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Hi <%= session[:user_firstname] %></a>
+                        <ul class="dropdown-menu">
+                            <li><a tabindex="-1" href="sign_in/logout">Sign out</a></li>
+                            
+                                                  
+                        </ul>
                     </li>
+                                        
+
+                                    <% end %>
+                    
                     <li class="dropdown dropdown-aux animate-click" data-animate-in="animated bounceInUp" data-animate-out="animated fadeOutDown" style="z-index:500;">
                         <a href="#" class="dropdown-form-toggle" data-toggle="dropdown"><i class="fa fa-search"></i></a>
                         <ul class="dropdown-menu dropdown-menu-user animate-wr">
