--- a/app/views/sign_in/index.html.erb
+++ b/app/views/sign_in/index.html.erb
@@ -1,4 +1,4 @@
-  <section class="slice slice-lg bg-image" style="background-image:url(images/backgrounds/full-bg-1.jpg);">
+  <section class="slice slice-lg bg-image" style="background-image:url(/images/backgrounds/full-bg-1.jpg);">
         <div class="wp-section">
             <div class="container">
                 <div class="row">
@@ -45,10 +45,13 @@
                                 </form>  
                             </div>
 
-                             <h5>or</h5>
-                                <a href="/auth/facebook" id="sign_in"><img alt="Facebook login button" border="0" src="/assets/facebook-login-button.png" 
-                                class="img-responsive img-rounded fill"
-                                style="width: 200px;"></a>
+                            <div style="padding-top:20px; border-top: 1px solid #ccc;">
+                             <h5 style="text-align:center">Or</h5>
+                                <a href="/auth/facebook" id="sign_in"><img alt="Facebook login button" border="0" src="/images/facebook-login-button.png" 
+                                class="img-responsive img-rounded fill center-block"
+                                ></a>
+                                <br/>
+                            </div>
                                 
                             <div class="form-footer">
                                 <p>Lost your password? <a href="#">Click here to recover.</a></p>
