updated login code

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -51,7 +51,7 @@
                 </button>
 
                 <a class="navbar-brand" href="/index.html" title="Boomerang | One template. Infinite solutions">
-                    <img src="/images/boomerang-logo-black.png" alt="Boomerang | One template. Infinite solutions">
+                    <img src="/images/ChangefinderLogo-blue.png" alt="Changefindr">
                 </a>
             </div>
             <div class="navbar-collapse collapse">
