modified code to make sure user is logged in when creating a new cause

--- a/app/views/cause/new.html.erb
+++ b/app/views/cause/new.html.erb
@@ -9,6 +9,14 @@
                 <div class="row">
                     <div class="col-md-7 col-md-offset-1 col-sm-5 col-sm-offset-1">
                     	<div class="row">
+                    		
+						 <% if session[:user_firstname] == nil %>
+						 <br/><br/><br/><br/><br/><br/>
+						 	<p>It's easy to create your own cause and start raising funds through unused gift card donations.  Simply
+						 	<a href="/sign_up/index">register</a> 
+						 	 and complete a short form.  We will contact you once we have reviewed your information.
+						 	</p>
+						 <% else %>
                     		<div class="col-md-12">
 
 							<div class="wp-block default user-form no-margin">
@@ -135,7 +143,9 @@
                                                 <div class="col-md-12">
                                                     
                                                     <br>
-                                                    <button id="register_button" class="btn btn-base btn-icon btn-icon-right btn-sign-in" type="submit">
+                                                    <button id="register_button" class="btn btn-base btn-icon btn-icon-right btn-sign-in" type="button"
+                                                    onClick="this.form.submit(); this.disabled=true;"
+                                                    >
                                                         <span>Submit Cause For Approval</span>
                                                     </button>
                                                 </div>
@@ -148,7 +158,9 @@
 
                             
 			            </div>
-			        </div>
+			       		 </div>
+
+			       		 <% end %>
 			    </div>
                     </div>
                     <div class="col-md-4">
